# Simple-x264-Launcher

./: .gitignore  CMakeLists.txt  claude.md
.github/workflows/: build-macos.yml
gui/: win_about.ui  win_addJob.ui  win_help.ui  win_main.ui  win_preferences.ui
res/icons/: movie.icns
src/: cli.h  encoder_abstract.cpp  encoder_abstract.h  encoder_factory.cpp  encoder_factory.h  encoder_x264.cpp  encoder_x264.h  encoder_x265.cpp  encoder_x265.h  global.cpp  global.h  input_filter.cpp  input_filter.h  ipc.h  job_object.cpp  job_object.h  main.cpp  mediainfo.cpp  mediainfo.h  model_clipInfo.cpp  model_clipInfo.h  model_jobList.cpp  model_jobList.h  model_logFile.cpp  model_options.cpp  model_options.h  model_recently.cpp  model_recently.h  model_sysinfo.h  mutils_compat.cpp  mutils_compat.h  source_abstract.cpp  source_abstract.h  source_factory.cpp  source_factory.h  source_vapoursynth.cpp  source_vapoursynth.h  string_validator.cpp  string_validator.h  thread_abstract.cpp  (+24 more)
